Fixed collapse areas clipping with button dropshadow

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -124,6 +124,10 @@ p {
     font-size: 2rem;
 }
 
+.studioCollapse {
+    margin-top: 3%;
+}
+
 .bounce {
     animation-name: bounce;
     animation-timing-function: ease-in-out;
